objects/AquaticSalesDirector__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting sale director name for AES approval process</description>
    <fields>
        <fullName>Executive_Director_ID__c</fullName>
        <label>Approver3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_of_Director__c</fullName>
        <label>Appover2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_of_Record__c</fullName>
        <label>AES RecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Aquatic Sales Director</label>
</CustomObject>